<resources>
    <string name="app_name">Early Bird</string>
    <string name="tab_text_1">Calendar</string>
    <string name="tab_text_2">Goals</string>
    <string name="tab_text_3">Account</string>
    <string name="hint">Enter Event Description</string>
    <string name="Register"><u>Register</u></string>
    <string name="Login">Login</string>
    <string name="PasswordInput"> Please input Password</string>
    <string name="UsernameInput"> Please input Username</string>
    <string name="select">Select</string>
    <string name="Username">Username:</string>
    <string name="UsernameHint">input Desired Username</string>
    <string name="Email">E-mail:</string>
    <string name="EmailHint">input your Email</string>
    <string name="Password">Password:</string>
    <string name="PasswordHint">input Desired Password</string>
    <string name="Gender">Gender:</string>
    <string name="GenderHint">input your Gender</string>
    <string name="FirstName">First Name:</string>
    <string name="FirstNameHint">input your First Name</string>
    <string name="LastName">Last Name:</string>
    <string name="LastNameHint">input your Last Name</string>
    <string name="EditAccount">Edit Account Info</string>

    <string-array name="frequency_arrays">
        <item><font size="15" color="#e9e9e9">One-Time</font></item>
        <item><font size="15" color="#e9e9e9">Daily</font></item>
        <item><font size="15" color="#e9e9e9">Weekly</font></item>
        <item><font size="15" color="#e9e9e9">Bi-Weekly</font></item>
        <item><font size="15" color="#e9e9e9">Monthly</font></item>
    </string-array>

</resources>
