<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="17sp"
            android:text="@string/Username"/>
        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textColor="#fff"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:textColorHint="#e9e9e9"
            android:hint="@string/UsernameHint"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="17sp"
            android:text="@string/Email"/>
        <TextView
            android:id="@+id/userEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textColor="#fff"
            android:layout_marginStart="20dp"
            android:textSize="15sp"
            android:textColorHint="#e9e9e9"
            android:hint="@string/EmailHint"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="17sp"
            android:text="@string/Password"/>
        <TextView
            android:id="@+id/userPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textColor="#fff"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:textColorHint="#e9e9e9"
            android:hint="@string/PasswordHint"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="17sp"
            android:text="@string/Gender"/>
        <TextView
            android:id="@+id/userGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textColor="#fff"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:textColorHint="#e9e9e9"
            android:hint="@string/GenderHint"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="17sp"
            android:text="@string/FirstName"/>
        <TextView
            android:id="@+id/userFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textColor="#fff"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:textColorHint="#e9e9e9"
            android:hint="@string/FirstNameHint"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="17sp"
            android:text="@string/LastName"/>
        <TextView
            android:id="@+id/userLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textColor="#fff"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:textColorHint="#e9e9e9"
            android:hint="@string/LastNameHint"/>
    </LinearLayout>
    <Button
        android:id="@+id/editAccount"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:text="@string/EditAccount"
        android:textColor="@color/colorPrimary"
        android:background="#fff"/>

</LinearLayout>